added my first blog

--- a/index.html
+++ b/index.html
@@ -6,12 +6,72 @@
     <title>Kids School</title>
     <link rel="stylesheet" href="styles.css/school.css">
 </head>
-<body>
-<header>
-
+<body class="quicksand-font">
+<header >
+    
+<nav class="navbar">
+    <img class="group"src="assets/logo.png" alt="">
+<h3 class="brand text-black">SCHOOL</h3>
+<ul class="nav-links display-flex">
+    <li class="nav-item"><a href="" class="nav-link text-org">Home</a></li>
+    <li class="nav-item"><a href="" class="nav-link text-sb">About</a></li>
+    <li class="nav-item"><a href="" class="nav-link text-paste">Facilities</a></li>
+    <li class="nav-item"><a href="" class="nav-link text-prp">Admission</a></li>
+</ul>
+<button class="btn-primary">Contact</button>
+</nav>
+<div class="banner-container display-flex">
+    <div class="banner-content ">
+        <h1 class="header"><span class="text-org bold">Empowering</span><br>
+            <span class="text-black bold">students from small</span><br> <span class="text-sb bold">age towards vision</span></h1>
+    <p class="text-black"> With the courage, Confidence, Creativity and Compassion to make<br>
+         their Unique Contribution in a Diverse and Dynamic World.</p>
+       <button class="btn-secondary">Enroll now</button>
+        </div>
+        <img class="kids" src="assets/hero-kids.png" alt="">
+</div>
 </header>
 <main>
-
+<scetion class="story">
+    <h2 class="story-heading">Our Stories </h2>
+    <div class="st">
+    <div class="story-card1-container">
+        <img class="img1"  src="assets/story-1.png" alt="">
+        <button class="btn-1">Novenber 19,2019</button>
+        <h3 class="heading">A fun toddler coloring training on
+        <br>classroom</h3>
+        <p class="description1">Beautiful branding for changes by Never Now in Australia.
+            changes is a platform for open discussion in an inclusive and
+            collaborative environment, providing the...</p>
+    </div>
+    <div class="card-4">
+        <div class="story-card2-container">
+            <img class="img2" src="assets/story-2.png" alt="">
+        <button class="btn-2">November 19, 2019</button>
+        <h3 class="heading1">Find out if a school fits the
+            family’s needs</h3>
+    </div>
+        <div class="story-card3-container">
+            <img class="img-3" src="assets/story-3.png" alt="" > 
+            <button class="btn-3">November 19, 2019</button>
+            <h3 class="heading1">Summer math & literacy
+                centres for kids</h3>
+            </div>
+        <div class="story-card3-container">
+            <img class="img-3" src="assets/story-4.png" alt="" > 
+            <button class="btn-2">September 10, 2019</button>
+            <h3 class="heading1">Classroom management
+                techniques for new tutors</h3>
+            </div>
+        <div class="story-card3-container">
+            <img class="img-3" src="assets/story-5.png" alt="" > 
+            <button class="btn-2">July 19, 2019</button>
+            <h3 class="heading1">Conversation rhymes
+                improve kids listening</h3>
+            </div>
+        </div>
+    </div>
+</scetion>
 </main>
 <footer>
 
