made navbar and our stories responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="banner-content ">
         <h1 class="header"><span class="text-org bold">Empowering</span><br>
             <span class="text-black bold">students from small</span><br> <span class="text-sb bold">age towards vision</span></h1>
-    <p class="text-black"> With the courage, Confidence, Creativity and Compassion to make<br>
+    <p class="text-black para"> With the courage, Confidence, Creativity and Compassion to make<br>
          their Unique Contribution in a Diverse and Dynamic World.</p>
        <button class="btn-secondary">Enroll now</button>
         </div>
@@ -37,14 +37,14 @@
     <div class="st">
     <div class="story-card1-container">
         <img class="img1"  src="assets/story-1.png" alt="">
-        <button class="btn-1">Novenber 19,2019</button>
+        <button class="btn-1">November 19,2019</button>
         <h3 class="heading">A fun toddler coloring training on
         <br>classroom</h3>
         <p class="description1">Beautiful branding for changes by Never Now in Australia.
             changes is a platform for open discussion in an inclusive and
             collaborative environment, providing the...</p>
     </div>
-    <div class="card-4">
+    <div class="card-4 ">
         <div class="story-card2-container">
             <img class="img2" src="assets/story-2.png" alt="">
         <button class="btn-2">November 19, 2019</button>
@@ -57,7 +57,7 @@
             <h3 class="heading1">Summer math & literacy
                 centres for kids</h3>
             </div>
-        <div class="story-card3-container">
+        <div class="story-card3-container ">
             <img class="img-3" src="assets/story-4.png" alt="" > 
             <button class="btn-2">September 10, 2019</button>
             <h3 class="heading1">Classroom management
@@ -68,6 +68,9 @@
             <button class="btn-2">July 19, 2019</button>
             <h3 class="heading1">Conversation rhymes
                 improve kids listening</h3>
+            </div>
+            <div class="view">
+                <button class="btn-secondary">View All</button>
             </div>
         </div>
     </div>
